[package]
name = "srcpos_get"
version = "1.1.1"
authors = ["Package <u2a5f@outlook.com>"]
edition = "2018"
description = "Tool triat for srcpos, Calculate Loc / Pos"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/2A5F/srcpos_get"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srcpos_get_derive = { version = "1.1", path = "../derive", optional = true }
srcpos = "1.1.1"

[features]
default = ["derive"]
derive = ["srcpos_get_derive"]